--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+        - coveralls
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.1-node-browsers
