--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
       - checkout
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip pear
+      - run: sudo apt install php-pear
+      - run: sudo docker-php-ext-install zip
       - run: pecl install pcov
 
       # Download and cache dependencies
