--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       #- run: sudo apt install php-pear
-      - run: sudo docker-php-ext-install zip pcov
+      - run: sudo docker-php-ext-install zip
+      - run: pecl install pcov
 
       # Download and cache dependencies
       - restore_cache:
