--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
         - coveralls
     docker:
       # Specify the version you desire here
-      - image: circleci/php:7.3-node-browsers
+      - image: circleci/php:latest
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
