--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,11 +1,20 @@
-<phpunit bootstrap="vendor/autoload.php">
+<phpunit bootstrap="vendor/autoload.php"
+         colors="true"
+         strict="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         forceCoversAnnotation="true"
+         syntaxCheck="true"
+         backupGlobals="true"
+         backupStaticAttributes="false">
     <testsuites>
         <testsuite name="basic">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
     <filter>
-        <whitelist>
+        <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
             <exclude>
                 <file>vendor/autoload.php</file>
