--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,11 +12,8 @@
         </testsuite>
     </testsuites>
     <filter>
-        <whitelist processUncoveredFilesFromWhitelist="false">
+        <whitelist addUncoveredFilesFromWhitelist="true" processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
-            <exclude>
-                <file>vendor/autoload.php</file>
-            </exclude>
         </whitelist>
     </filter>
     <logging>
